# streamlit-app

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yml  ecr-images.yml  validate.yml
api/: settings.py
api/routes/: endpoints.py  llm_routes.py  status_routes.py  v1_router.py
app/: Home.py  openai_key.py  password.py  reload.py  settings.py  sidebar_reload.py  user_name.py
app/pages/: 1_Chat_with_PDFs.py  1_Prompt_Demo.py  2_Chat_with_PDF.py  2_Chat_with_Websites.py  3_Website_Assistant.py
db/: README.md  session.py
db/migrations/: env.py
llm/: knowledge_base.py  schemas.py  settings.py  storage.py
llm/conversations/: pdf_auto.py  pdf_rag.py  website_auto.py  website_rag.py
llm/test/: pdf_auto.py  pdf_rag.py  website_auto.py  website_rag.py
notebooks/: chat_with_pdf.ipynb  chatgpt_stream.ipynb
scripts/: build_dev_image.sh  build_jupyter_image.sh  build_prd_image.sh  create_venv.sh  format.sh  install.sh  upgrade.sh  validate.sh
utils/: log.py
workspace/: .gitignore  dev_resources.py  prd_resources.py  settings.py
workspace/jupyter/: lab.py
