[project]
name = "llm"
version = "0.1.0"
requires-python = ">3.7"
readme = "README.md"
authors = [
  {name = "Team", email = "team@team.com"}
]

dependencies = [
  # Data processing Libraries
  "pandas",
  "polars",
  # Api server Libraries
  "fastapi",
  "typer",
  "uvicorn",
  # Project Libraries
  "openai",
  "pypdf",
  "scipy",
  "requests",
  "termcolor",
  "tiktoken",
  "textract",
  "langchain",
  "streamlit",
  "streamlit-chat",
  # For vector search
  "qdrant-client",
  # Formatting
  "black",
  # Type checking
  "mypy",
  # Testing
  "pytest",
  # Linting
  "ruff",
  # phidata
  "phidata==1.7.8",
  # Pin for dependency resolution
  "cryptography==39.0.2",
]

[project.scripts]
api = "api.cli:cli"
app = "app.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "app", "notebooks", "llm", "tests", "utils", "workspace"]

# Change this value to use a different directory for the phidata workspace.
# [tool.phidata]
# workspace = "workspace"

[tool.ruff]
line-length = 110
exclude = [
  "llmenv*",
  ".venv*",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
exclude = [
  "llmenv*",
  ".venv*",
]

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "phidata.*",
  "pyarrow.*",
  "langchain.*",
  "setuptools.*",
  "streamlit_chat.*",
]
ignore_missing_imports = true
